--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0D47A1"
+    android:background="@drawable/img"
     tools:context=".MainActivity">
 
 
@@ -12,10 +12,10 @@
         android:id="@+id/textView"
         android:layout_width="263dp"
         android:layout_height="38dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="94dp"
-        android:background="#2FC8A4"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="110dp"
+        android:background="@drawable/styles"
         android:text="My-Calculator"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -26,15 +26,17 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="339dp"
+        android:layout_height="56dp"
         android:layout_marginTop="12dp"
-        android:background="#89E6D1"
+        android:background="@drawable/img"
         android:ems="10"
         android:inputType="textPersonName"
         android:textAlignment="textEnd"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
@@ -44,8 +46,9 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="4dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="2"
+
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn3"
         app:layout_constraintHorizontal_bias="0.5"
@@ -56,9 +59,9 @@
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="12dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="1"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn2"
@@ -72,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="4dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="3"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btnPlus"
@@ -86,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="13dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="+"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="34dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="5"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn6"
@@ -114,7 +117,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="13dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="-"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -126,9 +129,9 @@
         android:id="@+id/btn4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="34dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="4"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn5"
@@ -143,7 +146,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="4dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="6"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btnMin"
@@ -155,9 +158,9 @@
         android:id="@+id/btn7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="34dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="7"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn8"
@@ -171,7 +174,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="34dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="8"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn9"
@@ -186,7 +189,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="4dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="9"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btnMul"
@@ -200,7 +203,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="13dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="*"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -212,9 +215,9 @@
         android:id="@+id/btnDot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="34dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="."
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn0"
@@ -228,7 +231,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="34dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="0"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btnEqual"
@@ -243,7 +246,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="4dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="="
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btnDiv"
@@ -257,7 +260,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="13dp"
-        android:background="#89E6D1"
+        android:background="@drawable/styles"
         android:text="/"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -267,17 +270,30 @@
 
     <Button
         android:id="@+id/btnC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="178dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="145dp"
-        android:background="#89E6D1"
-        android:text="C"
+        android:layout_width="127dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="34dp"
+        android:background="@drawable/styles"
+        android:text="Clear"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/btnMod"
+        app:layout_constraintHorizontal_bias="0.825"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnEqual" />
+
+    <Button
+        android:id="@+id/btnMod"
+        android:layout_width="123dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="60dp"
+        android:background="@drawable/styles"
+        android:text="Mod"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnC"
         app:layout_constraintTop_toBottomOf="@+id/btnEqual" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
